--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
   dio: ^4.0.4
+  cookie_jar: 3.0.1
+  dio_cookie_manager: 2.0.0
   flutter_svg: ^1.0.3
   
   flutter:
@@ -64,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/loading.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
