--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   cookie_jar: 3.0.1
   dio_cookie_manager: 2.0.0
   flutter_svg: ^1.0.3
-  
+  oauth_dio: ^0.2.7
   flutter:
     sdk: flutter
 
