--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dio_cookie_manager: 2.0.0
   flutter_svg: ^1.0.3
   oauth_dio: ^0.2.7
+  oauth1: ^2.0.0
   flutter:
     sdk: flutter
 
@@ -69,6 +70,7 @@ flutter:
   assets:
     - assets/loading.gif
     - assets/like.svg
+    - assets/eye.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
